--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -19,3 +19,10 @@
     font-size: 4rem;
     padding: 15px;
 }
+
+.hero_title span {
+    display: block;
+    font-size: 2rem;
+    text-transform: capitalize;
+    color: #fffa;
+}
