--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,22 +1,23 @@
 .navbar {
     position: sticky;
     top: 0;
-    height: 70px;
+    height: auto;
     background-color: #000;
-    opacity: .75;
+    /* opacity: .75; */
     display: flex;
     /* maximize space between logo(span) and the list */
     justify-content: space-between;
     align-items: center;
-    padding: 0 30px 0 30px;
+    padding: 0 10vw .5em;
     margin-bottom: -70px;
     z-index: 5;
 }
 
 .navbar_logo {
     color: #fff;
-    font-family: 'MonteCarlo', cursive;
+    font-family: 'Kaushan Script', cursive;
     font-size: 2.5rem;
+    text-transform: capitalize;
 }
 
 .navbar_list {
@@ -35,13 +36,26 @@
     text-align: center;
     padding: 10px;
     margin: 0 5px;
-    border-style: solid;
-    border-width: 0 0 1px 0;
     border-color: transparent;
     transition: 250ms;
+    position: relative;
 }
 
-.navbar_link:hover {
-    border-color: #fff;
-    transition: 250ms;
+.navbar_link::before {
+    position: absolute;
+    content: '';
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%) scale(.2);
+    height: 2px;
+    width: 50%;
+    background-color: #fff;
+    opacity: .2;
+    transition: .3s;
+}
+
+.navbar_link:hover.navbar_link::before {
+    transform: translateX(-50%) scale(1);
+
+    opacity: 1;
 }
