--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     position: sticky;
     top: 0;
-    height: auto;
+    height: 10vh;
     background-color: #000;
     /* opacity: .75; */
     display: flex;
@@ -59,3 +59,57 @@
 
     opacity: 1;
 }
+
+.navbar_menu {
+    color: #fff;
+    cursor: pointer;
+    display: none;
+}
+
+@media screen and (max-width: 800px){
+    .navbar_list {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        position: absolute;
+        top: 10vh;
+        left: -100%;
+        width: 100%;
+        height: 30vh;
+        transition: all .5s ease;
+    }
+    .navbar_list--active {
+        left: 0;
+    }
+
+    .navbar_item {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0;
+        flex: 1;
+    }
+    .navbar_link {
+        display: flex;
+        height: 100%;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        border-width: 0;
+        background-color: #000;
+        opacity: .75;
+    }
+
+    .navbar_link:hover {
+        opacity: .9;
+    }
+
+    .navbar_menu {
+        display: block;
+
+    }
+}
+
