--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,8 @@
 .navbar {
-    position: sticky;
+    position: fixed;
     top: 0;
     height: 10vh;
+    width: 100%;
     background-color: #000;
     /* opacity: .75; */
     display: flex;
@@ -67,6 +68,9 @@
 }
 
 @media screen and (max-width: 800px){
+    .navbar_logo {
+        font-size: 2rem;
+    }
     .navbar_list {
         display: flex;
         flex-direction: column;
@@ -100,7 +104,7 @@
         margin: 0;
         border-width: 0;
         background-color: #000;
-        opacity: .75;
+        opacity: .85;
     }
 
     .navbar_link:hover {
