--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #000;
     color: #fff;
-    height: auto;
+    height: 100vh;
     width: 100%;
     text-align: center;
     padding: 5vh 5vw;
