--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,7 +10,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 10vw .5em;
-    margin-bottom: -70px;
+    /* margin-bottom: -70px; */
     z-index: 5;
 }
 
