--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,14 +4,16 @@
     height: 100vh;
     width: 100%;
     text-align: center;
-    padding: 5vh 5vw;
+    padding: 10vh 5vw;
+    transform: translateY(10%);
     opacity: 0;
     transition: 1s ease;
 }
 .footer--zoom {
     opacity: 1;
+    transform: translateY(0);
 }
-.footer_title {
+.footer_logo {
     color: #fff;
     font-size: 3em;
     text-transform: capitalize;
@@ -36,14 +38,16 @@
     .footer {
         padding: 5vh 0;
     }
+    .footer_logo {
+        font-size: 3.5em;
+        letter-spacing: .2em;
+        padding-top: 40vh;
+    }
     .footer_title {
-        font-size: 1.8em;
+        font-size: 1.5em;
+        margin-bottom: 1em;
     }
-    .footer_title span {
-
-        font-size: 1em;
-    }
-    .footer span {
+    .footer p span {
         font-size: .8em;
     }
 
