--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,8 +2,14 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    background-image: url(../assets/hero.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
 .hero_image {
+    display: none;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -28,7 +34,7 @@
 @media screen and (max-width: 768px) {
     .hero_title {
         position: sticky;
-        bottom: 50vh;
+        top: 60vh;
         right: 0;
         font-size: 3rem;
     }
