--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -2,22 +2,12 @@
     display: flex;
     align-items: center;
     margin: 10vh 10vw;
-
+    padding: 10vh 0;
     opacity: 0;
     transform: scale(85%);
     transition: 1.5s;
     position: relative;
 }
-/* .slider::before {
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    z-index: -1;
-} */
 
 .slider--zoom {
     opacity: 1;
@@ -50,7 +40,10 @@
 @media screen and (max-width: 800px) {
     .slider {
         flex-direction: column;
-        background-color: #f4f4f4;
+        background-color: #fffa;
+        text-align: center;
+        margin: 5vh 10vw;
+
     }
 
     .slider_image {
@@ -58,6 +51,14 @@
     }
 
     .slider_title {
-        font-size: 1.5em;
+        font-size: 1.3em;
+        margin-bottom: .5em;
+        text-align: center;
+    }
+
+    .slider_content {
+        width: 100%;
+        padding: 1em 0;
+        text-align: center;
     }
 }
