--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,29 +5,52 @@
     width: 100%;
     text-align: center;
     padding: 10vh 5vw;
-    transform: translateY(10%);
     opacity: 0;
-    transition: 1s ease;
+    transition: 1.5s ease;
+    text-transform: capitalize;
 }
 .footer--zoom {
     opacity: 1;
-    transform: translateY(0);
+    min-height: 100vh;
 }
 .footer_logo {
-    color: #fff;
-    font-size: 3em;
+    background-image: linear-gradient(30deg, #dc143c, rgba(63, 63, 63, 0.699), #fff, skyblue);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 300%;
+    background-position: 0%;
+        letter-spacing: .2em;
+        font-size: 4em;
+    font-weight: 900;
     text-transform: capitalize;
-    padding-bottom: .5em;
+    padding: 0;
     font-family: 'Kaushan Script', cursive;
+    padding-top: 30vh;
+    margin-bottom: .5em;
+    animation: logo 8s infinite alternate;
 }
-.footer_title span {
-    font-size: .5em;
+
+@keyframes logo {
+    50% {
+        background-position: 100%;
+    }
+}
+.footer_title {
+    color: #ddd;
+    font-size: 1.5em;
+    margin-bottom: 5vh;
 }
 
 .footer p {
     color: #f4f4f4;
 }
-
+.footer .git-link a {
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    padding: .5em 0;
+}
 .footer span {
     display: block;
     color: #eee;
@@ -40,12 +63,11 @@
     }
     .footer_logo {
         font-size: 3.5em;
-        letter-spacing: .2em;
         padding-top: 40vh;
     }
     .footer_title {
         font-size: 1.5em;
-        margin-bottom: 1em;
+        /* margin-bottom: 1em; */
     }
     .footer p span {
         font-size: .8em;
