--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url(../assets/hero.jpg);
+    background-image: url(../assets/hero-min.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
