--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,7 +1,7 @@
 .hero {
     position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url(../assets/hero-min.jpg);
     background-size: cover;
     background-repeat: no-repeat;
