--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,15 +1,14 @@
 .hero {
     position: relative;
     width: 100%;
-    min-height: 100vh;
-    background-image: url(../assets/hero-min.jpg);
+    height: 100vh;
+    /* background-image: url(../assets/hero-min.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
+    background-position: center; */
 }
 .hero_image {
-    display: none;
+    /* display: none; */
     width: 100%;
     height: 100%;
     object-fit: cover;
