--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,13 +2,14 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    /* background-image: url(../assets/hero-min.jpg);
+    background-image: url(../assets/hero-min.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center; */
+    background-position: center;
+    background-attachment: fixed;
 }
 .hero_image {
-    /* display: none; */
+    display: none;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -16,7 +17,7 @@
 
 .hero_title {
     position: absolute;
-    bottom: 15%;
+    top: 60vh;
     right: 10%;
     color: #fff;
     font-size: 4rem;
