--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,14 +2,8 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url(../assets/hero-min.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
 }
 .hero_image {
-    display: none;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -33,10 +27,14 @@
 
 @media screen and (max-width: 768px) {
     .hero_title {
-        position: sticky;
-        top: 60vh;
-        right: 0;
+        width: 100%;
+        text-align: center;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         font-size: 3rem;
+        backdrop-filter: blur(3px);
+        -webkit-backdrop-filter: blur((3px));
     }
     .hero_title span {
         font-size: 1.5rem;
