--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    margin-bottom: 5vh;
 }
 .hero_image {
     width: 100%;
@@ -27,14 +28,9 @@
 
 @media screen and (max-width: 768px) {
     .hero_title {
-        width: 100%;
         text-align: center;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        top: 55%;
         font-size: 3rem;
-        backdrop-filter: blur(3px);
-        -webkit-backdrop-filter: blur((3px));
     }
     .hero_title span {
         font-size: 1.5rem;
