--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,6 +19,7 @@
     font-family: 'Kaushan Script', cursive;
     font-size: 2.5rem;
     text-transform: capitalize;
+    cursor: pointer;
 }
 
 .navbar_list {
@@ -41,7 +42,9 @@
     transition: 250ms;
     position: relative;
 }
-
+.navbar_link:hover {
+    color: #ddd;
+}
 .navbar_link::before {
     position: absolute;
     content: '';
