footer zoom transition

--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     margin: 5vh 10vw;
-    padding: 0;
+    padding: 5vh 0;
     opacity: 0;
     transform: scale(85%);
     transition: 1.5s;
