--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,8 +3,9 @@
     color: #fff;
     height: 100vh;
     width: 100%;
+    bottom: 0;
     text-align: center;
-    padding: 10vh 5vw;
+    padding: 10vh 10vw;
     opacity: 0;
     transition: 1.5s ease;
     text-transform: capitalize;
@@ -24,12 +25,56 @@
     font-family: 'Kaushan Script',cursive;
     padding-top: 5vh;
     margin-bottom: .5em;
+    transform: translateX(-100%);
+    transition: 1.5s;
+}
+.footer--zoom .footer_logo {
+    transform: translateX(0);
 }
 
 .footer_title {
     color: #ddd;
     font-size: 1.5em;
     margin-bottom: 5vh;
+}
+
+.footer_social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #161616;
+    border-radius: 5px;
+    width: 80%;
+    margin: 0 auto;
+    padding: 1em;
+    gap: 1.5em;
+}
+
+.social_link {
+    font-size: 2em;
+    cursor: pointer;
+    transition: .5s;
+    border-radius: 100%;
+    transform: scale(30%);
+}
+
+.social_link:hover {
+    color: skyblue;
+    background-color: #333;
+    /* border-radius: 50%; */
+}
+.footer--zoom .social_link {
+    transition: 1s ease;
+    transform: scale(1);
+}
+.footer--zoom .social_link:nth-child(1) {
+    transition-delay: 1s;
+}
+.footer--zoom .social_link:nth-child(2) {
+    transition-delay: 1.2s;
+}
+.footer--zoom .social_link:nth-child(3) {
+    transition-delay: 1.4s;
 }
 
 .footer .copyright-div {
@@ -62,7 +107,7 @@
 
 @media screen and (max-width: 768px) {
     .footer {
-        padding: 5vh 0;
+        padding: 5vh 5vw;
         margin-top: 5vh;
     }
     .footer_logo {
