--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,10 +1,15 @@
 .hero {
     position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     margin-bottom: 5vh;
+    background-image: url(/src/assets/hero-min.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
 }
 .hero_image {
+    display: none;
     width: 100%;
     height: 100%;
     object-fit: cover;
