--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth;
-  scroll-padding-top: 5vh;
+  scroll-padding-top: 10vh;
 }
 
 .App {
-  width: 100vw;
+  width: 100%;
 }
