--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    margin-bottom: 5vh;
+    margin-bottom: 10vh;
 }
 .hero_image {
     width: 100%;
@@ -12,11 +12,15 @@
 
 .hero_title {
     position: absolute;
-    top: 60vh;
+    top: 50vh;
     right: 10%;
     color: #fff;
     font-size: 4rem;
     padding: 15px;
+    /* border: 2px solid #f4f4f4; */
+    border-radius: 2px;
+    box-shadow: inset 3px 3px 4px #fffa,
+                inset -4px -4px 5px #000;
 }
 
 .hero_title span {
@@ -29,10 +33,13 @@
 @media screen and (max-width: 768px) {
     .hero_title {
         text-align: center;
-        top: 55%;
+        top: 30vh;
         font-size: 3rem;
+        letter-spacing: .1em;
+        background-color: #000a;
     }
     .hero_title span {
         font-size: 1.5rem;
+        letter-spacing: normal;
     }
 }
