--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,17 +9,21 @@
     /* maximize space between logo(span) and the list */
     justify-content: space-between;
     align-items: center;
-    padding: 0 10vw .5em;
+    padding: .5em 10vw;
     /* margin-bottom: -70px; */
     z-index: 5;
 }
 
 .navbar_logo {
-    color: #fff;
+    color: #f4f4f4;
     font-family: 'Kaushan Script', cursive;
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-transform: capitalize;
     cursor: pointer;
+    border: 2px solid hsla(0, 0%, 96%, 0.5);
+    border-radius: 2px;
+    padding: 0 .5em;
+    text-decoration: none;
 }
 
 .navbar_list {
@@ -34,7 +38,7 @@
 .navbar_link {
     font-size: .85rem;
     text-decoration: none;
-    color: #fff;
+    color: #f4f4f4;
     text-align: center;
     padding: 10px;
     margin: 0 5px;
