--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #000;
     color: #fff;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     bottom: 0;
     text-align: center;
@@ -13,7 +13,7 @@
 }
 .footer--zoom {
     opacity: 1;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 .footer_logo {
     color: skyblue;
