--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -3,8 +3,12 @@
     width: 100%;
     height: 100vh;
     margin-bottom: 10vh;
+    background-image: url(/src/assets/hero-min.jpg);
+    background-size: cover;
+    background-position: center;
 }
 .hero_image {
+    display: none;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -33,10 +37,13 @@
 @media screen and (max-width: 768px) {
     .hero_title {
         text-align: center;
-        top: 30vh;
         font-size: 3rem;
         letter-spacing: .1em;
         background-color: #000a;
+        position: sticky;
+        top: 40vh;
+        margin: 0 10vw;
+        padding: .2em 0; 
     }
     .hero_title span {
         font-size: 1.5rem;
