--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,7 +1,7 @@
 .hero {
     position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     margin-bottom: 10vh;
     background-image: url(/src/assets/hero-min.jpg);
     background-size: cover;
@@ -41,9 +41,9 @@
         letter-spacing: .1em;
         background-color: #000a;
         position: sticky;
-        top: 40vh;
-        margin: 0 10vw;
-        padding: .2em 0; 
+        top: 45vh;
+        margin: 0vh 10vw 5vh;
+        padding: .3em 0;
     }
     .hero_title span {
         font-size: 1.5rem;
