--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -15,15 +15,15 @@
 }
 
 .navbar_logo {
-    color: #f4f4f4;
-    font-family: 'Kaushan Script', cursive;
+    color: #ead2a1;
     font-size: 2rem;
     text-transform: capitalize;
     cursor: pointer;
-    border: 2px solid hsla(0, 0%, 96%, 0.5);
-    border-radius: 2px;
     padding: 0 .5em;
     text-decoration: none;
+}
+.navbar_logo span {
+    color: #f4f4f4;
 }
 
 .navbar_list {
@@ -52,13 +52,13 @@
 .navbar_link::before {
     position: absolute;
     content: '';
-    bottom: 0;
+    bottom: 0em;
     left: 50%;
     transform: translateX(-50%) scale(.2);
     height: 2px;
     width: 50%;
     background-color: #fff;
-    opacity: .2;
+    opacity: 1;
     transition: .3s;
 }
 
@@ -75,9 +75,14 @@
 }
 
 @media screen and (max-width: 800px){
-    .navbar_logo {
-        font-size: 2rem;
+    .navbar {
+        padding: 0 5vw;
     }
+    .navbar_logo {
+        font-size: 1.3rem;
+    }
+    
+    
     .navbar_list {
         display: flex;
         flex-direction: column;
@@ -111,16 +116,35 @@
         margin: 0;
         border-width: 0;
         background-color: #000;
-        opacity: .85;
+        /* opacity: .85; */
     }
-
+    .navbar_link::before {
+        bottom: .5em;
+        background: #ead2a1;
+        /* opacity: 1; */
+    }
+    
     .navbar_link:hover {
-        opacity: .9;
+        color: #ead2a1;
+    }
+    .navbar_link:hover.navbar_link::before {
+        transform: translateX(-50%) scale(.5);
+        opacity: .1;
     }
 
     .navbar_menu {
         display: block;
-
+        transition: .3s;
     }
+    .navbar_menu:hover {
+        transform: scale(.98);
+        color: #ead2a1;
+    }
+    .navbar_menu:active {
+        transition: .2s;
+        transform: scale(.9);
+        color: #ead2a1;
+    }
+    
 }
 
