--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -47,7 +47,7 @@
     position: relative;
 }
 .navbar_link:hover {
-    color: #ddd;
+    color: #ead2a1;
 }
 .navbar_link::before {
     position: absolute;
@@ -57,7 +57,7 @@
     transform: translateX(-50%) scale(.2);
     height: 2px;
     width: 50%;
-    background-color: #fff;
+    background-color: #f4f4f4;
     opacity: 1;
     transition: .3s;
 }
