--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,13 @@
   scroll-padding-top: 10vh;
 }
 
+:root {
+  --blue: #29323c;
+  --blue-dark: #20262e;
+  --span-gold: #ff0000;
+}
+
 .App {
   width: 100%;
 }
+
