--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #000;
+    background-color: var(--blue);
     color: #fff;
     min-height: 100vh;
     width: 100%;
@@ -83,6 +83,7 @@
 .social_link:hover {
     fill: #ead2a1;
     background-color: #333;
+    transition: fill .1s;
     transform: scale(100%);
 }
 .footer--zoom .social_link {
