--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,40 +1,42 @@
 .hero {
     position: relative;
+    height: 90vh;
     width: 100%;
-    min-height: 100vh;
-    margin-bottom: 10vh;
-    background-image: url(/src/assets/shakex-logo-min.png);
-    background-repeat: no-repeat;
-    background-color: var(--blue);
-    background-size: contain;
-    background-position: center;
+    background-color: hsl(212, 19%, 10%);
+    padding: 5vh 5vw;
 }
 .hero_image {
-    display: none;
+    position: absolute;
+    inset: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: .5;
+    mix-blend-mode: overlay;
 }
 
-.hero_title {
-    position: absolute;
-    top: 50vh;
-    right: 10%;
-    color: #ead2a1;
-    font-size: 4rem;
-    padding: 15px;
-    /* border: 2px solid #f4f4f4; */
-    border-radius: 2px;
-    box-shadow: inset 3px 3px 4px #fffa,
-                inset -4px -4px 5px #000;
+.hero-title {
+    /* border: 2px solid red; */
+    position: relative;
+    top: 10vh;
+    color: #f4f4f4;
 }
 
-.hero_title span {
-    display: block;
-    font-size: 2rem;
+.hero-title h1 {
+    margin-bottom: 1rem;
+    line-height: 1.4;
+    letter-spacing: -.0125rem;
+}
+
+.hero-title p {
     text-transform: capitalize;
-    color: #ddd;
+    line-height: 1.8;
 }
+.hero-title p span {
+    color: #b3c0cc;
+}
+
+
 
 @media screen and (max-width: 768px) {
     .hero_title {
