--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     position: sticky;
     top: 0;
-    height: 10vh;
+    min-height: 6vh;
     width: 100%;
     background-color: #29323c;
     /* opacity: .75; */
@@ -9,21 +9,20 @@
     /* maximize space between logo(span) and the list */
     justify-content: space-between;
     align-items: center;
-    padding: .5em 10vw;
-    /* margin-bottom: -70px; */
+    padding: .5rem 10vw;
     z-index: 5;
 }
 
 .navbar_logo {
-    color: #ead2a1;
-    font-size: 2rem;
+    color: #fafafa;
+    font-size: 1rem;
+    font-size: clamp(1rem, 2vw, 1.025rem);
     text-transform: capitalize;
     cursor: pointer;
-    padding: 0 .5em;
     text-decoration: none;
 }
 .navbar_logo span {
-    color: #f4f4f4;
+    color: #b3c0cc;
 }
 
 .navbar_list {
@@ -47,7 +46,7 @@
     position: relative;
 }
 .navbar_link:hover {
-    color: #ead2a1;
+    color: #b3c0cc;
 }
 .navbar_link::before {
     position: absolute;
@@ -76,20 +75,15 @@
 
 @media screen and (max-width: 800px){
     .navbar {
-        padding: 0 5vw;
+        padding: .5rem 5vw;
     }
-    .navbar_logo {
-        font-size: 1.3rem;
-    }
-    
-    
     .navbar_list {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
         position: absolute;
-        top: 10vh;
+        top: 6vh;
         left: -100%;
         width: 100%;
         height: 30vh;
@@ -120,12 +114,12 @@
     }
     .navbar_link::before {
         bottom: .5em;
-        background: #ead2a1;
+        background: #b3c0cc;
         /* opacity: 1; */
     }
     
     .navbar_link:hover {
-        color: #ead2a1;
+        color: #b3c0cc;
     }
     .navbar_link:hover.navbar_link::before {
         transform: translateX(-50%) scale(.5);
