--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -30,14 +30,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 20px 10px;
     text-align: left;
+    /* border: 2px solid red; */
 }
 
 .slider_title {
     text-align: left;
-    margin-bottom: .3em;
-    font-size: 2em;
+    margin-bottom: .5rem;
+    font-size: 1rem;
+    font-size: clamp(1rem, 3vw, 2.5rem);
 }
 
 @media screen and (max-width: 800px) {
@@ -56,7 +58,6 @@
         margin: 5vh 0;
     }
     .slider_title {
-        font-size: 1.3em;
         margin-bottom: .5em;
         text-align: center;
     }
